[gd_scene load_steps=9 format=2]

[ext_resource path="res://battle/tactical_map/tactical_map.tscn" type="PackedScene" id=1]
[ext_resource path="res://battle/scripts/Battle.gd" type="Script" id=2]
[ext_resource path="res://battle/CameraSpot/CameraSpot.tscn" type="PackedScene" id=3]
[ext_resource path="res://battle/UI/BattleUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/music/goblin_battle.mp3" type="AudioStream" id=5]
[ext_resource path="res://battle/scene_objects/MouseHover/MouseHover.tscn" type="PackedScene" id=6]

[sub_resource type="ProceduralSky" id=3]

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 3 )
background_energy = 1.2
ambient_light_color = Color( 0.196078, 0.588235, 0.937255, 1 )
ambient_light_energy = 0.7
ambient_light_sky_contribution = 0.3
fog_enabled = true
fog_depth_begin = 15.0
ss_reflections_enabled = true
ss_reflections_depth_tolerance = 0.5
ssao_enabled = true
ssao_color = Color( 0.196078, 0.317647, 0.176471, 1 )
dof_blur_far_distance = 25.0
glow_enabled = true
glow_bloom = 0.03
glow_blend_mode = 0

[node name="Battle" type="Spatial"]
script = ExtResource( 2 )

[node name="BattleUI" parent="." instance=ExtResource( 4 )]

[node name="TacticalMap" parent="." instance=ExtResource( 1 )]

[node name="Soil" parent="TacticalMap" index="0"]
data = {
"cells": PoolIntArray(  )
}

[node name="Obstacles" parent="TacticalMap" index="1"]
data = {
"cells": PoolIntArray(  )
}

[node name="Vegetation" parent="TacticalMap" index="2"]
data = {
"cells": PoolIntArray(  )
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Units" type="Spatial" parent="."]

[node name="MouseHover" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="TracePath" type="Spatial" parent="."]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.653222, 0.541963, -0.52875, 0, 0.698328, 0.715778, 0.757166, -0.467562, 0.456163, 0, 8.1521, 0 )
light_energy = 0.3
shadow_enabled = true
directional_shadow_mode = 0
directional_shadow_depth_range = 1

[node name="CameraSpot" parent="." instance=ExtResource( 3 )]

[node name="Soundtrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Battle_soundtrack"

[connection signal="next_turn_pressed" from="BattleUI" to="." method="end_turn"]

[editable path="TacticalMap"]
